--- a/app.json
+++ b/app.json
@@ -1,20 +1,24 @@
 {
   "pages": [
+    "pages/index/index",
+    "pages/index/reportDetails/index",
     "pages/login/index",
     "pages/cs/index",
     "pages/user/index",
-    "pages/index/index",
     "pages/pieChart/index",
     "pages/orderList/index",
     "pages/equipment/index",
     "pages/user/markeMoney/index"
   ],
+ 
   "window": {
-    "navigationBarBackgroundColor": "#FDE50D",
+    "backgroundTextStyle": "dark",
+    "navigationBarBackgroundColor": "#0042BB",
     "navigationBarTitleText": "智能充电柜",
-    "navigationStyle": "custom",
-    "navigationBarTextStyle": "white"
-  },
+    "navigationBarTextStyle": "white",
+    "enablePullDownRefresh": true,
+    "backgroundColor": "#fff"
+},
   "usingComponents": {
     "cu-custom": "/colorui/components/cu-custom",
     "scroll-y": "/component/scroll-y/index",
